Finished day 9 of 2024 in Rust

--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -25,17 +25,19 @@
         "day 5",
         "day 6",
         "day 7",
-        "day 8"
+        "day 8",
+        "day 9"
       ],
       "y": [
-        1.4259121,
-        0.3186675,
-        0.0510831,
-        0.8361328,
-        0.2954278,
-        0.30584,
-        0.6892819,
-        0.0579463
+        1.5272189,
+        0.248956,
+        0.0643311,
+        0.6623501,
+        0.2500451,
+        1.5926,
+        0.5511053,
+        0.0544876,
+        0.6794568
       ],
       "name": "Initialization",
       "marker": {
@@ -44,14 +46,15 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.16710229670351628,
-          0.09817398073700423,
-          0.02680401992966724,
-          0.06760219111951916,
-          0.033042027891157046,
-          0.017324964646428576,
-          0.08295377268328429,
-          0.01812543809980878
+          0.30795795406644416,
+          0.2472829737850952,
+          0.2084190438102767,
+          0.39082791238598863,
+          0.3942204411189125,
+          3.93275882911729,
+          0.43983650710452526,
+          0.21040923374757137,
+          0.39005041245172495
         ]
       }
     },
@@ -65,17 +68,19 @@
         "day 5",
         "day 6",
         "day 7",
-        "day 8"
+        "day 8",
+        "day 9"
       ],
       "y": [
-        0.0001546,
-        0.0105502,
-        0.4486764,
-        3.0106351,
-        0.1071776,
-        0.47969,
-        0.7156437,
-        1.9343644
+        0.0001629,
+        0.0077285,
+        0.320408,
+        2.3189335,
+        0.0853652,
+        0.38996,
+        0.5411899,
+        1.4772784,
+        0.6488357
       ],
       "name": "Part 1",
       "marker": {
@@ -84,14 +89,15 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.00006130937938032002,
-          0.00429015850056847,
-          0.06626640010623783,
-          0.16408531317872418,
-          0.008925856723026641,
-          0.016931712848970715,
-          0.07786138144362718,
-          0.11817016024631595
+          0.00005597847800717655,
+          0.0010554893414904765,
+          0.06648200009025014,
+          0.24830694941493345,
+          0.014309356692737802,
+          0.012023576838861221,
+          0.11211993572951241,
+          0.24625690242801315,
+          0.11506440785712145
         ]
       }
     },
@@ -105,17 +111,19 @@
         "day 5",
         "day 6",
         "day 7",
-        "day 8"
+        "day 8",
+        "day 9"
       ],
       "y": [
-        0.0434721,
-        0.3523987,
-        0.4168713,
-        3.0883794,
-        0.1723596,
-        1911.248,
-        1.0682781,
-        7.251808
+        0.0347181,
+        0.2658829,
+        0.3476045,
+        19.895725,
+        0.140274,
+        1476.2513,
+        0.7960709,
+        5.479915,
+        8.920176
       ],
       "name": "Part 2",
       "marker": {
@@ -124,14 +132,15 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.009756015149127217,
-          0.11986275213055131,
-          0.05400774228117665,
-          0.19629050539888585,
-          0.020425584149296686,
-          66.33182683683603,
-          0.11813695929043534,
-          0.3844185982441551
+          0.009306544062647523,
+          0.01799680353812862,
+          0.05572184463700045,
+          0.6470330640651687,
+          0.046762731357353454,
+          18.57461649240705,
+          0.0751960137453442,
+          0.43735737276163555,
+          0.444917765058848
         ]
       }
     }
