Finished day 10 of 2024 in Rust

--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -26,18 +26,20 @@
         "day 6",
         "day 7",
         "day 8",
-        "day 9"
+        "day 9",
+        "day 10"
       ],
       "y": [
-        1.5272189,
-        0.248956,
-        0.0643311,
-        0.6623501,
-        0.2500451,
-        1.5926,
-        0.5511053,
-        0.0544876,
-        0.6794568
+        1.5971384,
+        0.3782435,
+        0.0632708,
+        1.4707946,
+        0.5205852,
+        0.93657,
+        0.7910547,
+        0.1087475,
+        1.3392605,
+        0.4007276
       ],
       "name": "Initialization",
       "marker": {
@@ -46,15 +48,16 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.30795795406644416,
-          0.2472829737850952,
-          0.2084190438102767,
-          0.39082791238598863,
-          0.3942204411189125,
-          3.93275882911729,
-          0.43983650710452526,
-          0.21040923374757137,
-          0.39005041245172495
+          0.2433214796220013,
+          0.11854919087766926,
+          0.032771909424993834,
+          1.0231783389320501,
+          0.34153285976749015,
+          1.7908126803493434,
+          0.33445769537851866,
+          0.3389560763487743,
+          0.6981629056974027,
+          0.6455058836279036
         ]
       }
     },
@@ -69,18 +72,20 @@
         "day 6",
         "day 7",
         "day 8",
-        "day 9"
+        "day 9",
+        "day 10"
       ],
       "y": [
-        0.0001629,
-        0.0077285,
-        0.320408,
-        2.3189335,
-        0.0853652,
-        0.38996,
-        0.5411899,
-        1.4772784,
-        0.6488357
+        0.0001856,
+        0.0123554,
+        0.5026997,
+        5.3605475,
+        0.1807042,
+        0.57771,
+        0.8147039,
+        2.3499832,
+        0.8954088,
+        2.1494458
       ],
       "name": "Part 1",
       "marker": {
@@ -89,15 +94,16 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.00005597847800717655,
-          0.0010554893414904765,
-          0.06648200009025014,
-          0.24830694941493345,
-          0.014309356692737802,
-          0.012023576838861221,
-          0.11211993572951241,
-          0.24625690242801315,
-          0.11506440785712145
+          0.0000859804628971031,
+          0.004621429523426714,
+          0.1265048129910874,
+          1.446666007596012,
+          0.06496214561080939,
+          0.07499384574750116,
+          0.15098331548482433,
+          0.49642002938817864,
+          0.22187399821195816,
+          0.4586760760509643
         ]
       }
     },
@@ -112,18 +118,20 @@
         "day 6",
         "day 7",
         "day 8",
-        "day 9"
+        "day 9",
+        "day 10"
       ],
       "y": [
-        0.0347181,
-        0.2658829,
-        0.3476045,
-        19.895725,
-        0.140274,
-        1476.2513,
-        0.7960709,
-        5.479915,
-        8.920176
+        0.0482051,
+        0.4041046,
+        0.5463536,
+        5.568515,
+        0.2913402,
+        2602.9011,
+        1.1994287,
+        8.759937,
+        15.968187,
+        2.7861884
       ],
       "name": "Part 2",
       "marker": {
@@ -132,15 +140,16 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.009306544062647523,
-          0.01799680353812862,
-          0.05572184463700045,
-          0.6470330640651687,
-          0.046762731357353454,
-          18.57461649240705,
-          0.0751960137453442,
-          0.43735737276163555,
-          0.444917765058848
+          0.01203527664783822,
+          0.11889133525551811,
+          0.13048746203003572,
+          1.597617097863828,
+          0.10309231864673521,
+          254.674999628339,
+          0.21583410144439633,
+          1.723846925648769,
+          3.432484842192838,
+          0.5901656896206688
         ]
       }
     }
