Finished day 11 of 2024 in Rust

--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -27,19 +27,21 @@
         "day 7",
         "day 8",
         "day 9",
-        "day 10"
+        "day 10",
+        "day 11"
       ],
       "y": [
-        1.5971384,
-        0.3782435,
-        0.0632708,
-        1.4707946,
-        0.5205852,
-        0.93657,
-        0.7910547,
-        0.1087475,
-        1.3392605,
-        0.4007276
+        1.9137082,
+        0.4621173,
+        0.0924622,
+        1.1590635,
+        0.437341,
+        1.13934,
+        0.8788362,
+        0.0895715,
+        1.3005463,
+        0.3276282,
+        0.1100938
       ],
       "name": "Initialization",
       "marker": {
@@ -48,16 +50,17 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.2433214796220013,
-          0.11854919087766926,
-          0.032771909424993834,
-          1.0231783389320501,
-          0.34153285976749015,
-          1.7908126803493434,
-          0.33445769537851866,
-          0.3389560763487743,
-          0.6981629056974027,
-          0.6455058836279036
+          0.4332899884058713,
+          0.7073580675801393,
+          0.31255625025131073,
+          0.5576973820813941,
+          0.5355704615258442,
+          2.4187199417047025,
+          0.5991683365879403,
+          0.19434336417215206,
+          0.7598287939176229,
+          0.23534767826507208,
+          0.028688607870721076
         ]
       }
     },
@@ -73,19 +76,21 @@
         "day 7",
         "day 8",
         "day 9",
-        "day 10"
+        "day 10",
+        "day 11"
       ],
       "y": [
-        0.0001856,
-        0.0123554,
-        0.5026997,
-        5.3605475,
-        0.1807042,
-        0.57771,
-        0.8147039,
-        2.3499832,
-        0.8954088,
-        2.1494458
+        0.0002197,
+        0.0149934,
+        0.588901,
+        4.227583,
+        0.1523141,
+        0.60985,
+        0.9657857,
+        2.444579,
+        0.944312,
+        1.8893459,
+        0.9331711
       ],
       "name": "Part 1",
       "marker": {
@@ -94,16 +99,17 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.0000859804628971031,
-          0.004621429523426714,
-          0.1265048129910874,
-          1.446666007596012,
-          0.06496214561080939,
-          0.07499384574750116,
-          0.15098331548482433,
-          0.49642002938817864,
-          0.22187399821195816,
-          0.4586760760509643
+          0.00021578208915477737,
+          0.004162256171837577,
+          0.1653818302565309,
+          0.9847663389002466,
+          0.041047147418426015,
+          0.11662520525169505,
+          0.3015462872023298,
+          0.5339852434951363,
+          0.13936244047805693,
+          0.4831768102498197,
+          0.2676480139563714
         ]
       }
     },
@@ -119,19 +125,21 @@
         "day 7",
         "day 8",
         "day 9",
-        "day 10"
+        "day 10",
+        "day 11"
       ],
       "y": [
-        0.0482051,
-        0.4041046,
-        0.5463536,
-        5.568515,
-        0.2913402,
-        2602.9011,
-        1.1994287,
-        8.759937,
-        15.968187,
-        2.7861884
+        0.0563585,
+        0.4886211,
+        0.6256106,
+        4.344364,
+        0.2475686,
+        2664.4148,
+        1.4137594,
+        9.215084,
+        15.590103,
+        2.4725075,
+        35.820732
       ],
       "name": "Part 2",
       "marker": {
@@ -140,16 +148,17 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.01203527664783822,
-          0.11889133525551811,
-          0.13048746203003572,
-          1.597617097863828,
-          0.10309231864673521,
-          254.674999628339,
-          0.21583410144439633,
-          1.723846925648769,
-          3.432484842192838,
-          0.5901656896206688
+          0.013820131249376783,
+          0.1475807882645637,
+          0.17256179364981108,
+          1.2182205433153348,
+          0.06379566438277766,
+          133.79940137196766,
+          0.43937872205366346,
+          1.8118790845539314,
+          2.4253688551581156,
+          0.6459999135489418,
+          6.460756787167003
         ]
       }
     }
