Finished day 12 of 2024 in Rust

--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -28,20 +28,22 @@
         "day 8",
         "day 9",
         "day 10",
-        "day 11"
+        "day 11",
+        "day 12"
       ],
       "y": [
-        1.9137082,
-        0.4621173,
-        0.0924622,
-        1.1590635,
-        0.437341,
-        1.13934,
-        0.8788362,
-        0.0895715,
-        1.3005463,
-        0.3276282,
-        0.1100938
+        1.941151,
+        0.3782449,
+        0.0677525,
+        1.1050689,
+        0.443765,
+        0.37275,
+        0.8259989,
+        0.0826959,
+        1.255755,
+        0.3027531,
+        1.0321025,
+        2.8106573
       ],
       "name": "Initialization",
       "marker": {
@@ -50,17 +52,18 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.4332899884058713,
-          0.7073580675801393,
-          0.31255625025131073,
-          0.5576973820813941,
-          0.5355704615258442,
-          2.4187199417047025,
-          0.5991683365879403,
-          0.19434336417215206,
-          0.7598287939176229,
-          0.23534767826507208,
-          0.028688607870721076
+          0.31782090629629783,
+          0.1084248417752593,
+          0.017259791822325114,
+          0.2517060817755302,
+          0.12551215038792152,
+          0.06066299118902727,
+          0.17710378411764677,
+          0.022444836671047533,
+          0.4477157194414729,
+          0.07870391419993036,
+          25.757783419602383,
+          0.8576263981642352
         ]
       }
     },
@@ -77,20 +80,22 @@
         "day 8",
         "day 9",
         "day 10",
-        "day 11"
+        "day 11",
+        "day 12"
       ],
       "y": [
-        0.0002197,
-        0.0149934,
-        0.588901,
-        4.227583,
-        0.1523141,
-        0.60985,
-        0.9657857,
-        2.444579,
-        0.944312,
-        1.8893459,
-        0.9331711
+        0.000215,
+        0.0127902,
+        0.5212237,
+        4.1960707,
+        0.1604205,
+        0.67348,
+        0.9117563,
+        2.4181268,
+        0.9320225,
+        1.8113669,
+        0.9146117,
+        8.072858
       ],
       "name": "Part 1",
       "marker": {
@@ -99,17 +104,18 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.00021578208915477737,
-          0.004162256171837577,
-          0.1653818302565309,
-          0.9847663389002466,
-          0.041047147418426015,
-          0.11662520525169505,
-          0.3015462872023298,
-          0.5339852434951363,
-          0.13936244047805693,
-          0.4831768102498197,
-          0.2676480139563714
+          0.00012072696467649637,
+          0.003248941975474477,
+          0.14482499283034672,
+          1.0552430353409776,
+          0.04271536245602976,
+          0.10473004153536845,
+          0.2742414897500193,
+          0.5155515856456653,
+          0.1281468933831417,
+          0.38083367022151554,
+          0.2749009305060824,
+          1.4525590768901653
         ]
       }
     },
@@ -126,20 +132,22 @@
         "day 8",
         "day 9",
         "day 10",
-        "day 11"
+        "day 11",
+        "day 12"
       ],
       "y": [
-        0.0563585,
-        0.4886211,
-        0.6256106,
-        4.344364,
-        0.2475686,
-        2664.4148,
-        1.4137594,
-        9.215084,
-        15.590103,
-        2.4725075,
-        35.820732
+        0.0573625,
+        0.4218579,
+        0.5421885,
+        4.401837,
+        0.2595568,
+        2662.0479,
+        1.3364172,
+        9.051833,
+        15.535746,
+        2.3569245,
+        36.465557,
+        13.790174
       ],
       "name": "Part 2",
       "marker": {
@@ -148,17 +156,18 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.013820131249376783,
-          0.1475807882645637,
-          0.17256179364981108,
-          1.2182205433153348,
-          0.06379566438277766,
-          133.79940137196766,
-          0.43937872205366346,
-          1.8118790845539314,
-          2.4253688551581156,
-          0.6459999135489418,
-          6.460756787167003
+          0.013251751723828817,
+          0.13308911051468483,
+          0.14457942363196088,
+          1.2925650907103723,
+          0.06384350518071516,
+          129.99193850376608,
+          0.38814028134704104,
+          1.6771930175944538,
+          2.5237293612940968,
+          0.495776263404008,
+          6.772828959695257,
+          2.4672646526079824
         ]
       }
     }
