--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -29,21 +29,23 @@
         "day 9",
         "day 10",
         "day 11",
-        "day 12"
+        "day 12",
+        "day 13"
       ],
       "y": [
-        1.941151,
-        0.3782449,
-        0.0677525,
-        1.1050689,
-        0.443765,
-        0.37275,
-        0.8259989,
-        0.0826959,
-        1.255755,
-        0.3027531,
-        1.0321025,
-        2.8106573
+        1.9799838,
+        0.4270456,
+        0.0855021,
+        1.1981694,
+        0.509663,
+        1.55552,
+        0.880837,
+        0.1071744,
+        1.3315792,
+        0.4106417,
+        0.124897,
+        3.2643843,
+        0.5457533
       ],
       "name": "Initialization",
       "marker": {
@@ -52,18 +54,19 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.31782090629629783,
-          0.1084248417752593,
-          0.017259791822325114,
-          0.2517060817755302,
-          0.12551215038792152,
-          0.06066299118902727,
-          0.17710378411764677,
-          0.022444836671047533,
-          0.4477157194414729,
-          0.07870391419993036,
-          25.757783419602383,
-          0.8576263981642352
+          0.584386741548403,
+          0.5707984098441765,
+          0.4857236931894414,
+          0.9199208536105218,
+          0.3420728740648698,
+          3.560966945592166,
+          0.6433996851032765,
+          0.3834200973144736,
+          0.8688971486702893,
+          0.5464571577453341,
+          0.5012669192865241,
+          8.481500174738144,
+          0.15748956279420556
         ]
       }
     },
@@ -81,21 +84,23 @@
         "day 9",
         "day 10",
         "day 11",
-        "day 12"
+        "day 12",
+        "day 13"
       ],
       "y": [
-        0.000215,
-        0.0127902,
-        0.5212237,
-        4.1960707,
-        0.1604205,
-        0.67348,
-        0.9117563,
-        2.4181268,
-        0.9320225,
-        1.8113669,
-        0.9146117,
-        8.072858
+        0.0002262,
+        0.0134391,
+        0.5188816,
+        4.5184326,
+        0.2787919,
+        0.69081,
+        0.9488872,
+        2.6237638,
+        0.9493862,
+        2.214331,
+        1.0265785,
+        8.221481,
+        0.0321524
       ],
       "name": "Part 1",
       "marker": {
@@ -104,18 +109,19 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.00012072696467649637,
-          0.003248941975474477,
-          0.14482499283034672,
-          1.0552430353409776,
-          0.04271536245602976,
-          0.10473004153536845,
-          0.2742414897500193,
-          0.5155515856456653,
-          0.1281468933831417,
-          0.38083367022151554,
-          0.2749009305060824,
-          1.4525590768901653
+          0.00018339454735623905,
+          0.0036745912956409168,
+          0.1370397007492355,
+          1.2417100387196849,
+          0.05718007821252088,
+          0.11341728660129372,
+          0.28649384833912234,
+          0.6148812786809417,
+          0.1320347566724762,
+          0.575917163157167,
+          0.33074869621473924,
+          1.5366799296649616,
+          0.01048903399937287
         ]
       }
     },
@@ -133,21 +139,23 @@
         "day 9",
         "day 10",
         "day 11",
-        "day 12"
+        "day 12",
+        "day 13"
       ],
       "y": [
-        0.0573625,
-        0.4218579,
-        0.5421885,
-        4.401837,
-        0.2595568,
-        2662.0479,
-        1.3364172,
-        9.051833,
-        15.535746,
-        2.3569245,
-        36.465557,
-        13.790174
+        0.0596909,
+        0.4703808,
+        0.5735561,
+        4.7621617,
+        0.4356624,
+        2028.7476,
+        1.3935982,
+        9.742668,
+        15.758066,
+        2.8737433,
+        38.64926,
+        13.9390955,
+        0.0319519
       ],
       "name": "Part 2",
       "marker": {
@@ -156,18 +164,19 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.013251751723828817,
-          0.13308911051468483,
-          0.14457942363196088,
-          1.2925650907103723,
-          0.06384350518071516,
-          129.99193850376608,
-          0.38814028134704104,
-          1.6771930175944538,
-          2.5237293612940968,
-          0.495776263404008,
-          6.772828959695257,
-          2.4672646526079824
+          0.015929318478516263,
+          0.1647032844583253,
+          0.14564991617845155,
+          1.3968798320840303,
+          0.08665608487717404,
+          44.89296643203253,
+          0.4058087564564863,
+          2.01111544884006,
+          2.0183390247777493,
+          0.753181713501968,
+          6.5552776257508745,
+          2.63731958114995,
+          0.010587232706897494
         ]
       }
     }
