Finished day 14 of 2024, in both Rust and Python

--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -30,22 +30,24 @@
         "day 10",
         "day 11",
         "day 12",
-        "day 13"
+        "day 13",
+        "day 14"
       ],
       "y": [
-        2.0321586,
-        0.3997792,
-        0.0712018,
-        1.2241693,
-        0.4937719,
-        0.37849,
-        0.9926789,
-        0.1200885,
-        1.5671602,
-        0.4256941,
-        0.1175103,
-        3.2928572,
-        0.5977376
+        1.8867372,
+        0.4082934,
+        0.0827525,
+        1.148624,
+        0.4822472,
+        1.38492,
+        0.9006194,
+        0.1092757,
+        1.3161646,
+        0.3804456,
+        0.1174015,
+        2.8832633,
+        0.552032,
+        0.521083
       ],
       "name": "Initialization",
       "marker": {
@@ -54,19 +56,20 @@
       "error_y": {
         "type": "data",
         "array": [
-          1.3807621680021662,
-          0.10147550919980648,
-          0.019784190576316227,
-          0.29902625290684776,
-          0.1361409786228599,
-          0.05310601566677734,
-          0.23007040601691905,
-          0.02862348961517445,
-          0.5414873247232667,
-          0.12273018013182412,
-          0.02009276496428504,
-          1.068178354540846,
-          0.1653028104608027
+          0.4252214908446653,
+          0.517092610812067,
+          0.3563952634558379,
+          0.5389055372734642,
+          0.3674706691589954,
+          3.166226971902046,
+          0.5389785077010398,
+          0.4614370039122456,
+          0.6617334227367084,
+          0.33668170291930005,
+          0.32976066731456755,
+          1.048825487821072,
+          0.5329355839273628,
+          0.11050247839302056
         ]
       }
     },
@@ -85,22 +88,24 @@
         "day 10",
         "day 11",
         "day 12",
-        "day 13"
+        "day 13",
+        "day 14"
       ],
       "y": [
-        0.0002273,
-        0.0133527,
-        0.5385549,
-        4.689566,
-        0.280172,
-        0.6601,
-        1.1167217,
-        3.0408947,
-        0.9905134,
-        2.3546014,
-        1.0712084,
-        9.139191,
-        0.0339218
+        0.0002136,
+        0.0136507,
+        0.5794586,
+        4.338245,
+        0.275756,
+        0.59569,
+        0.9651546,
+        2.5255673,
+        0.8098151,
+        2.0765843,
+        0.9347673,
+        8.229631,
+        0.0304078,
+        0.0080796
       ],
       "name": "Part 1",
       "marker": {
@@ -109,19 +114,20 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.0000760572810452748,
-          0.004432134103341185,
-          0.13991632833944018,
-          1.2760375676212632,
-          0.0550541611143064,
-          0.1417706880846672,
-          0.38390626051044013,
-          0.7568594430625535,
-          0.13059202793601157,
-          0.5734394765690193,
-          0.34150230851505214,
-          1.751472560127333,
-          0.008808836742726022
+          0.00012819921996642621,
+          0.007793562696867203,
+          0.1829402908766683,
+          1.1415723433812506,
+          0.057874163181855114,
+          0.017909798993846916,
+          0.3161644979418782,
+          0.6278461459499136,
+          0.1401841887731637,
+          0.5897540860591898,
+          0.3046302233540034,
+          1.693225266061875,
+          0.009767358863070423,
+          0.003459772223716461
         ]
       }
     },
@@ -140,22 +146,24 @@
         "day 10",
         "day 11",
         "day 12",
-        "day 13"
+        "day 13",
+        "day 14"
       ],
       "y": [
-        0.062849,
-        0.4360899,
-        0.5784281,
-        4.8368583,
-        0.4381875,
-        2225.7915,
-        1.5995803,
-        11.309587,
-        18.041922,
-        3.0508597,
-        42.910625,
-        15.645801,
-        0.0336488
+        0.0569314,
+        0.4431858,
+        0.6408661,
+        4.5014024,
+        0.4302586,
+        2690.499,
+        1.3963835,
+        9.415861,
+        15.817301,
+        2.651288,
+        37.295494,
+        14.143326,
+        0.0299646,
+        78.94051
       ],
       "name": "Part 2",
       "marker": {
@@ -164,19 +172,20 @@
       "error_y": {
         "type": "data",
         "array": [
-          0.043313449169975024,
-          0.13201105388561232,
-          0.14601016211342954,
-          1.3902574867014525,
-          0.08706581702223899,
-          175.499214604499,
-          0.5033135264046754,
-          2.4281877400268668,
-          2.7582503558283378,
-          0.7572948459271596,
-          7.461475425866812,
-          2.9663624279223186,
-          0.010165348914818417
+          0.014317346613112354,
+          0.13303495870770204,
+          0.2086229751508449,
+          1.41506645996002,
+          0.09112426431000693,
+          117.53491580281198,
+          0.4522181639626493,
+          2.067904405124801,
+          2.6720409158636014,
+          0.738638150041004,
+          6.253807133901473,
+          2.965143115526608,
+          0.009962983832165952,
+          4.650142093893939
         ]
       }
     }
