--- a/2024_rust/images/runtimes.html
+++ b/2024_rust/images/runtimes.html
@@ -1,231 +1,3 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-</head>
-
-<body>
-    <div>
-        <script src="https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-svg.js"></script>
-        <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script>
-        <div id="plotly-html-element" class="plotly-graph-div" style="height:100%; width:100%;"></div>
-
-        <script type="module">
-            const graph_div = document.getElementById("plotly-html-element");
-            await Plotly.newPlot(graph_div, {
-  "data": [
-    {
-      "type": "bar",
-      "x": [
-        "day 1",
-        "day 2",
-        "day 3",
-        "day 4",
-        "day 5",
-        "day 6",
-        "day 7",
-        "day 8",
-        "day 9",
-        "day 10",
-        "day 11",
-        "day 12",
-        "day 13",
-        "day 14"
-      ],
-      "y": [
-        1.8867372,
-        0.4082934,
-        0.0827525,
-        1.148624,
-        0.4822472,
-        1.38492,
-        0.9006194,
-        0.1092757,
-        1.3161646,
-        0.3804456,
-        0.1174015,
-        2.8832633,
-        0.552032,
-        0.521083
-      ],
-      "name": "Initialization",
-      "marker": {
-        "color": "red"
-      },
-      "error_y": {
-        "type": "data",
-        "array": [
-          0.4252214908446653,
-          0.517092610812067,
-          0.3563952634558379,
-          0.5389055372734642,
-          0.3674706691589954,
-          3.166226971902046,
-          0.5389785077010398,
-          0.4614370039122456,
-          0.6617334227367084,
-          0.33668170291930005,
-          0.32976066731456755,
-          1.048825487821072,
-          0.5329355839273628,
-          0.11050247839302056
-        ]
-      }
-    },
-    {
-      "type": "bar",
-      "x": [
-        "day 1",
-        "day 2",
-        "day 3",
-        "day 4",
-        "day 5",
-        "day 6",
-        "day 7",
-        "day 8",
-        "day 9",
-        "day 10",
-        "day 11",
-        "day 12",
-        "day 13",
-        "day 14"
-      ],
-      "y": [
-        0.0002136,
-        0.0136507,
-        0.5794586,
-        4.338245,
-        0.275756,
-        0.59569,
-        0.9651546,
-        2.5255673,
-        0.8098151,
-        2.0765843,
-        0.9347673,
-        8.229631,
-        0.0304078,
-        0.0080796
-      ],
-      "name": "Part 1",
-      "marker": {
-        "color": "blue"
-      },
-      "error_y": {
-        "type": "data",
-        "array": [
-          0.00012819921996642621,
-          0.007793562696867203,
-          0.1829402908766683,
-          1.1415723433812506,
-          0.057874163181855114,
-          0.017909798993846916,
-          0.3161644979418782,
-          0.6278461459499136,
-          0.1401841887731637,
-          0.5897540860591898,
-          0.3046302233540034,
-          1.693225266061875,
-          0.009767358863070423,
-          0.003459772223716461
-        ]
-      }
-    },
-    {
-      "type": "bar",
-      "x": [
-        "day 1",
-        "day 2",
-        "day 3",
-        "day 4",
-        "day 5",
-        "day 6",
-        "day 7",
-        "day 8",
-        "day 9",
-        "day 10",
-        "day 11",
-        "day 12",
-        "day 13",
-        "day 14"
-      ],
-      "y": [
-        0.0569314,
-        0.4431858,
-        0.6408661,
-        4.5014024,
-        0.4302586,
-        2690.499,
-        1.3963835,
-        9.415861,
-        15.817301,
-        2.651288,
-        37.295494,
-        14.143326,
-        0.0299646,
-        78.94051
-      ],
-      "name": "Part 2",
-      "marker": {
-        "color": "green"
-      },
-      "error_y": {
-        "type": "data",
-        "array": [
-          0.014317346613112354,
-          0.13303495870770204,
-          0.2086229751508449,
-          1.41506645996002,
-          0.09112426431000693,
-          117.53491580281198,
-          0.4522181639626493,
-          2.067904405124801,
-          2.6720409158636014,
-          0.738638150041004,
-          6.253807133901473,
-          2.965143115526608,
-          0.009962983832165952,
-          4.650142093893939
-        ]
-      }
-    }
-  ],
-  "layout": {
-    "title": {
-      "text": "Runtimes in ms for Advent of Code 2024",
-      "font": {
-        "family": "Droid Serif",
-        "size": 24,
-        "color": "black"
-      }
-    },
-    "xaxis": {
-      "title": {
-        "text": "Day",
-        "font": {
-          "family": "Droid Serif",
-          "size": 12,
-          "color": "black"
-        }
-      }
-    },
-    "yaxis": {
-      "title": {
-        "text": "Runtime in ms",
-        "font": {
-          "family": "Droid Serif",
-          "size": 12,
-          "color": "black"
-        }
-      },
-      "type": "log"
-    },
-    "barmode": "group"
-  },
-  "config": {}
-});
-        </script>
-    </div>
-</body>
-
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:f723c5075dbd35e294ff1b5df95b74978257bc983855318f9dacd6781c8430a3
+size 4928
